fix: layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
   border-radius: .25rem;
+  outline: 2px dashed transparent;
   border: 1px var(--stroke-default) dashed;
 
   gap: .5rem;
@@ -25,7 +26,7 @@
   }
 
   &:hover, &:has(input:focus) {
-    border-width: 2px;
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
     
