--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,7 +2,9 @@ input, textarea, select {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  outline: 1px solid transparent;
+  border: 2px solid var(--stroke-default);
+
 
   padding: .75rem 1rem;
   font: var(--text);
